--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
   <div id="home" class="slider-area">
     <div class="bend niceties preview-2">
       <div id="ensign-nivoslider" class="slides">
-        <img src="img/slider/TSAbanner3.png" alt="" title="#slider-direction-1" />
-        <img src="img/slider/MSUCampus.png" alt="" title="#slider-direction-2" />
+        <img src="img/slider/TSABanner3.png" alt="" title="#slider-direction-1"/>
+        <img src="img/slider/MSUCampus.png" alt="" title="#slider-direction-2"/>
       </div>
 
       <!-- direction 1 -->
@@ -136,7 +136,7 @@
               <div class="slider-content text-center">
                 <!-- layer 2 -->
                 <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
-                  <h1 class="title2">Meet our Team </h1>
+                  <h1 class="title2">Meet our Team</h1>
                 </div>
                 <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
                   <a class="ready-btn right-btn page-scroll" href="eboard.html">Learn more</a>
