--- a/index.html
+++ b/index.html
@@ -579,7 +579,11 @@
               <div class="single-icon">
                 <i class="fa fa-envelope-o"></i>
                 <p>
-                  Email: info@example.com
+                  Email:
+                  <a href="mailto:tsa.doc@gmail.com">
+                    <i class="fa fa-envelope-o"></i>
+                  </a>
+
                 </p>
               </div>
             </div>
