--- a/index.html
+++ b/index.html
@@ -579,11 +579,7 @@
               <div class="single-icon">
                 <i class="fa fa-envelope-o"></i>
                 <p>
-                  Email:
-                  <a href="mailto:tsa.doc@gmail.com">
-                    <i class="fa fa-envelope-o"></i>
-                  </a>
-
+                  Email: <a href="mailto:tsa.doc@gmail.com">tsa.doc@gmail.com</a> 
                 </p>
               </div>
             </div>
