--- a/index.html
+++ b/index.html
@@ -502,17 +502,17 @@
                   
                 <div class="team-img">
                   <a href="#">
-                      <img src="img/team/chaaim.jpeg" alt="">
+                      <img src="img/team/tao.jpeg" alt="">
                   </a>
                   <div class="team-social-icon text-center">
                     <ul>
                       <li>
-                        <a href="https://www.facebook.com/profile.php?id=100009932621738">
+                        <a href="https://www.facebook.com/nvkupatavetin">
                           <i class="fa fa-facebook"></i>
                       </a>
                       </li>
                       <li>
-                        <a href="mailto:tavipata@msu.edu">
+                        <a href="mailto:kupatave@msu.edu">
                           <i class="fa fa-envelope-o"></i>
                         </a>
                       </li>
@@ -520,9 +520,9 @@
                   </div>
                 </div>
                 <div class="team-content text-center">
-                  <h4>Pitchsinee Tavipatana</h4>
-                <h4>(Amy/Chaaim)</h4>
-                  <p>Oversee</p>
+                  <h4>Niti Kupatavetin</h4>
+                <h4>(P’Tao)</h4>
+                  <p>Advisor</p>
                 </div>
               </div>
             </div>
