--- a/index.html
+++ b/index.html
@@ -174,13 +174,19 @@
     <div class="well-middle">
       <div class="single-well">
         <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;The Thai Student Association at Michigan State University is a non-profit organization under 
-            the Registered Student Organization at Michigan State University.
+          &nbsp;&nbsp;&nbsp;&nbsp;
+          The Thai Student Association at Michigan State University (ThaiSA @ MSU) 
+          is a Registered Student Organization at Michigan State University.
         </p>
         <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;Our ThaiSA community has grown to become a tight-knitted family, and no words will explain how happy we will be if you were to join us! Beyond being students who strive for academic excellence, we are all like brothers and sisters; looking after one another, supporting each other, and having a great time together. ThaiSA will provide a place for you to settle in before you go out and explore the Spartan nation and create new friendships with people around the world.
-          <br>Go Green!
+          &nbsp;&nbsp;&nbsp;&nbsp;Our ThaiSA community has grown to become a tight-knitted family, 
+          and no words will explain how happy we will be if you were to join us! Beyond being 
+          students who strive for academic excellence, we are all like brothers and sisters; 
+          looking after one another, supporting each other, and having a great time together. 
+          ThaiSA will provide a place for you to settle in before you go out and explore the 
+          Spartan nation and create new friendships with people around the world.
         </p>
+        <p>&nbsp;&nbsp;&nbsp;&nbsp;Go Green!</p>
       </div>
     </div>
   </div>
@@ -214,8 +220,11 @@
           <div class="well-middle">
             <div class="single-well">
               <p>
-                Our main objectives are to promote Thai cultures to communities in the Greater Lansing 
-                Area and to support Thai students at Michigan State University.
+                &nbsp;&nbsp;&nbsp;&nbsp;
+                ThaiSA's main objectives are to support Thai scholars at Michigan State University, 
+                and promote Thai culture to the Spartan community and Greater Lansing Area. 
+                Our goal is to assist every Thai student by providing a platform for them to bond and interact, 
+                while helping each other succeed and strive here at Michigan State University
               </p>
               <h4 class="sec-head">Events</h4>
               <ul>
@@ -223,7 +232,7 @@
                   <i class="fa fa-check"></i> Welcome Party
                 </li>
                 <li>
-                  <i class="fa fa-check"></i> 5M
+                  <i class="fa fa-check"></i> 5M: Interschool Sports Day
                 </li>
                 <li>
                   <i class="fa fa-check"></i> Global Festival
@@ -579,12 +588,24 @@
               <div class="single-icon">
                 <i class="fa fa-envelope-o"></i>
                 <p>
-                  Email: <a href="mailto:tsa.doc@gmail.com">tsa.doc@gmail.com</a> 
+                  Email: <a href="mailto:thailand@msu.edu">thailand@msu.edu</a> 
                 </p>
               </div>
             </div>
           </div>
-        
+
+          <!-- Start contact icon column -->
+          <div class="col-md-4 col-sm-4 col-xs-12">
+            <div class="contact-icon text-center">
+              <div class="single-icon">
+                <i class="fa fa-check"></i>
+                <p>
+                  Instragram: <a href="https://www.instagram.com/thaisamsu/">@thaisamsu</a> 
+                </p>
+              </div>
+            </div>
+          </div>
+      
       </div>
     </div>
   </div>
