--- a/eboard.html
+++ b/eboard.html
@@ -199,7 +199,7 @@
                 <br></br>
               <div class="single-well">
                 <p>Undergraduate Senior</p>
-                <p>Honors College:<br>B.S. Actuarial Science<br>B.S. Advanced Mathematics<br> B.S. Statistics</p>
+                <p>Honors College:<br>B.S. Advanced Mathematics<br> B.S. Economics</p>
                 <p>
                   “ลองคำแรก อาจจะยังไม่หลงรัก แต่ถ้าดื่มไปซักพัก เธอจะหลงรักฉันหมดใจ”
                 </p>
@@ -298,7 +298,7 @@
                 <br></br>
               <div class="single-well">
                 <p>Undergraduate Sophomore</p>
-                <p>B.A. Supply Chain Management </p>
+                <p>Honor’s College: <br>B.A. Supply Chain Management </p>
                 <p>
                   “ยิ้มบ่อยกว่าพี่ ไม่ใช่คนดี แต่เป็นคนบ้า”
                 </p>
@@ -347,7 +347,8 @@
                 <br></br>
               <div class="single-well">
                 <p>Undergraduate Sophomore</p>
-                <p>B.S. Geographic Information Science<br>Minor in Computer Science</p>
+                <p>B.S. Geographic Information Science<br>Minor in Computer Science
+                  <br>Minor in Social Science Quantitative Data Analytics                </p>
                 <p> 
                   “ถ้าไม่สนเรื่องหุ่น เจ๊ก็กอดอุ่นเหมือนกัน”
                 </p>
