--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="section-headline text-center">
-            <h2>Our Objective</h2>
+            <h2>Our Objectives and Goal</h2>
           </div>
         </div>
       </div>
@@ -238,7 +238,7 @@
                   <i class="fa fa-check"></i> Global Festival
                 </li>
                 <li>
-                  <i class="fa fa-check"></i> And More...
+                  <i class="fa fa-check"></i> And Many More...
                 </li>
               </ul>
               
